Examples/test-suite/errors/cpp_invalid_exponents1.i
%module xxx

void bad(double nn = 5e);

